--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-vanilla-template",
+  "name": "crypto-dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
